--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ramda": "^0.25.0",
     "standard": "^11.0.1",
     "tedious": "^2.3.1",
-    "tedious-connection-pool": "^1.0.5"
+    "tedious-connection-pool": "^1.0.5",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "jasmine-console-reporter": "^3.0.0"
