--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ node_modules
 
 # Ignore jetbrains project dir
 .idea
+# Jetbrains projects files
+*.iml
 
 # Optional REPL history
 .node_repl_history
