--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "license": "GPL-3.0",
   "dependencies": {
     "ramda": "^0.25.0",
-    "standard": "^11.0.1",
     "tedious": "^2.3.1",
     "tedious-connection-pool": "^1.0.5",
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "jasmine-console-reporter": "^3.0.0"
+    "jasmine-console-reporter": "^3.0.0",
+    "standard": "^12.0.1"
   },
   "scripts": {
     "lint": "standard"
