--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "helper package for tedious SQL Server module",
   "main": "index.js",
-  "repository": "xxx",
+  "repository": "https://github.com/DFEAGILEDEVOPS/less-tedious",
   "author": "Guy Harwood, Jon Shipley, George Chatzigiannis",
   "license": "GPL-3.0",
   "dependencies": {
+    "moment": "^2.22.2",
     "ramda": "^0.25.0",
     "tedious": "^2.3.1",
     "tedious-connection-pool": "^1.0.5",
