--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DFEAGILEDEVOPS/less-tedious"
+    "url": "https://github.com/DFEAGILEDEVOPS/less-tedious.git"
   },
   "author": "Guy Harwood, Jon Shipley, George Chatzigiannis",
   "license": "GPL-3.0",
