--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "GPL-3.0",
   "dependencies": {
     "moment": "^2.22.2",
+    "mssql": "^5.0.3",
     "ramda": "^0.25.0",
     "tedious": "^2.3.1",
-    "tedious-connection-pool": "^1.0.5",
     "winston": "^3.0.0"
   },
   "devDependencies": {
